# seqthreat

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: pipeline.yaml
notebooks/: 01_showcase.ipynb
src/: __init__.py  cli.py
src/data/: download.py  real_datasets.py  split.py
src/features/: ngram.py  statistical.py
src/monitoring/: drift.py
src/serving/: app.py
src/training/: adversarial.py  deep_model.py  evaluate.py  explain.py  models.py  train.py  tune.py
tests/: test_adversarial.py  test_deep_model.py  test_drift.py  test_integration.py  test_models.py  test_real_datasets.py  test_serving.py  test_split.py  test_statistical.py  test_train.py  test_tune.py
